src/parser/PmmParser.java
// Generated from java-escape by ANTLR 4.11.1
package parser;

/*Todo se pone en pmmParser*/
import ast.definiciones.*;
import ast.expressions.*;
import ast.statements.*;
import ast.tipos.*;
import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, BLANK=38, 
		COMMENT=39, MULTILINE_COMMENT=40, ID=41, CHAR_CONSTANT=42, REAL_CONSTANT=43, 
		INT_CONSTANT=44;
	public static final int
		RULE_program = 0, RULE_main = 1, RULE_listaDefOpt = 2, RULE_listaDef = 3, 
		RULE_definition = 4, RULE_defVar = 5, RULE_identificadores = 6, RULE_defFunc = 7, 
		RULE_defParamsOpt = 8, RULE_defParams = 9, RULE_defParam = 10, RULE_listaDefVar = 11, 
		RULE_statements = 12, RULE_type = 13, RULE_listaCampos = 14, RULE_structField = 15, 
		RULE_sympleType = 16, RULE_listaDimensiones = 17, RULE_statement = 18, 
		RULE_cuerpoIf = 19, RULE_statementsNoOpt = 20, RULE_listaExpComas = 21, 
		RULE_listaExpComasNoOpcion = 22, RULE_expression = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "main", "listaDefOpt", "listaDef", "definition", "defVar", 
			"identificadores", "defFunc", "defParamsOpt", "defParams", "defParam", 
			"listaDefVar", "statements", "type", "listaCampos", "structField", "sympleType", 
			"listaDimensiones", "statement", "cuerpoIf", "statementsNoOpt", "listaExpComas", 
			"listaExpComasNoOpcion", "expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'def'", "'main'", "'('", "')'", "':'", "'{'", "'}'", "';'", "','", 
			"'struct'", "'['", "']'", "'char'", "'double'", "'int'", "'print'", "'input'", 
			"'='", "'if'", "'else'", "'while'", "'return'", "'.'", "'-'", "'!'", 
			"'*'", "'/'", "'%'", "'+'", "'>'", "'>='", "'<'", "'<='", "'!='", "'=='", 
			"'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "BLANK", "COMMENT", "MULTILINE_COMMENT", "ID", "CHAR_CONSTANT", 
			"REAL_CONSTANT", "INT_CONSTANT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public ListaDefOptContext listaDefOpt;
		public MainContext main;
		public ListaDefOptContext listaDefOpt() {
			return getRuleContext(ListaDefOptContext.class,0);
		}
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PmmParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			((ProgramContext)_localctx).listaDefOpt = listaDefOpt();
			setState(49);
			((ProgramContext)_localctx).main = main();
			((ProgramContext)_localctx).listaDefOpt.ast.add(((ProgramContext)_localctx).main.ast);
			setState(51);
			match(EOF);
			((ProgramContext)_localctx).ast =  new Program(((ProgramContext)_localctx).listaDefOpt.ast.get(0).getLine(),((ProgramContext)_localctx).listaDefOpt.ast.get(0).getColumn(),((ProgramContext)_localctx).listaDefOpt.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public DefFuncion ast;
		public Token def;
		public ListaDefVarContext listaDefVar;
		public StatementsContext statements;
		public ListaDefVarContext listaDefVar() {
			return getRuleContext(ListaDefVarContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			((MainContext)_localctx).def = match(T__0);
			setState(55);
			match(T__1);
			setState(56);
			match(T__2);
			setState(57);
			match(T__3);
			setState(58);
			match(T__4);
			setState(59);
			match(T__5);
			setState(60);
			((MainContext)_localctx).listaDefVar = listaDefVar();
			setState(61);
			((MainContext)_localctx).statements = statements();
			setState(62);
			match(T__6);
			((MainContext)_localctx).ast =  new DefFuncion(((MainContext)_localctx).def.getLine(), ((MainContext)_localctx).def.getCharPositionInLine()+1,"main",
			     new FunctionType(((MainContext)_localctx).def.getLine(), ((MainContext)_localctx).def.getCharPositionInLine()+1, new ArrayList<DefVariable>()
			     , new VoidType(((MainContext)_localctx).def.getLine(), ((MainContext)_localctx).def.getCharPositionInLine()+1)),
			            ((MainContext)_localctx).statements.ast,((MainContext)_localctx).listaDefVar.ast );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaDefOptContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public ListaDefContext listaDef;
		public ListaDefContext listaDef() {
			return getRuleContext(ListaDefContext.class,0);
		}
		public ListaDefOptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaDefOpt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitListaDefOpt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaDefOptContext listaDefOpt() throws RecognitionException {
		ListaDefOptContext _localctx = new ListaDefOptContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_listaDefOpt);
		try {
			setState(69);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				((ListaDefOptContext)_localctx).listaDef = listaDef();
				((ListaDefOptContext)_localctx).ast =  ((ListaDefOptContext)_localctx).listaDef.ast;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaDefContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public DefinitionContext definition;
		public ListaDefContext l;
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public ListaDefContext listaDef() {
			return getRuleContext(ListaDefContext.class,0);
		}
		public ListaDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaDef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitListaDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaDefContext listaDef() throws RecognitionException {
		ListaDefContext _localctx = new ListaDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_listaDef);
		try {
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				((ListaDefContext)_localctx).definition = definition();
				_localctx.ast.addAll(((ListaDefContext)_localctx).definition.ast);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				((ListaDefContext)_localctx).definition = definition();
				setState(75);
				((ListaDefContext)_localctx).l = listaDef();

				        for(Definition def: ((ListaDefContext)_localctx).definition.ast){
				            ((ListaDefContext)_localctx).l.ast.add(0,def);
				        }
				        ((ListaDefContext)_localctx).ast =  ((ListaDefContext)_localctx).l.ast;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public DefVarContext defVar;
		public DefFuncContext defFunc;
		public DefVarContext defVar() {
			return getRuleContext(DefVarContext.class,0);
		}
		public DefFuncContext defFunc() {
			return getRuleContext(DefFuncContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_definition);
		try {
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				((DefinitionContext)_localctx).defVar = defVar();
				for(DefVariable def: ((DefinitionContext)_localctx).defVar.ast){
				            _localctx.ast.add(def);
				        }
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				((DefinitionContext)_localctx).defFunc = defFunc();
				_localctx.ast.add(((DefinitionContext)_localctx).defFunc.ast);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefVarContext extends ParserRuleContext {
		public List<DefVariable> ast = new ArrayList<DefVariable>();
		public IdentificadoresContext ids;
		public Token d;
		public TypeContext type;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentificadoresContext identificadores() {
			return getRuleContext(IdentificadoresContext.class,0);
		}
		public DefVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defVar; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitDefVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefVarContext defVar() throws RecognitionException {
		DefVarContext _localctx = new DefVarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_defVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			((DefVarContext)_localctx).ids = identificadores();
			setState(89);
			((DefVarContext)_localctx).d = match(T__4);
			setState(90);
			((DefVarContext)_localctx).type = type();
			setState(91);
			match(T__7);
			for(String id : ((DefVarContext)_localctx).ids.ast){
			            _localctx.ast.add(new DefVariable(id, ((DefVarContext)_localctx).type.ast,((DefVarContext)_localctx).d.getLine(), ((DefVarContext)_localctx).d.getCharPositionInLine()+1 ));
			        }
			     
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentificadoresContext extends ParserRuleContext {
		public List<String> ast = new ArrayList<String>();
		public Token ID;
		public IdentificadoresContext id;
		public TerminalNode ID() { return getToken(PmmParser.ID, 0); }
		public IdentificadoresContext identificadores() {
			return getRuleContext(IdentificadoresContext.class,0);
		}
		public IdentificadoresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identificadores; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitIdentificadores(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentificadoresContext identificadores() throws RecognitionException {
		IdentificadoresContext _localctx = new IdentificadoresContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_identificadores);
		try {
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				((IdentificadoresContext)_localctx).ID = match(ID);
				_localctx.ast.add((((IdentificadoresContext)_localctx).ID!=null?((IdentificadoresContext)_localctx).ID.getText():null));
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				((IdentificadoresContext)_localctx).ID = match(ID);
				setState(97);
				match(T__8);
				setState(98);
				((IdentificadoresContext)_localctx).id = identificadores();
				 ((IdentificadoresContext)_localctx).id.ast.add((((IdentificadoresContext)_localctx).ID!=null?((IdentificadoresContext)_localctx).ID.getText():null)); ((IdentificadoresContext)_localctx).ast = ((IdentificadoresContext)_localctx).id.ast;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefFuncContext extends ParserRuleContext {
		public DefFuncion ast;
		public Token d;
		public Token name;
		public DefParamsOptContext defParamsOpt;
		public SympleTypeContext t;
		public ListaDefVarContext listaDefVar;
		public StatementsContext statements;
		public DefParamsOptContext defParamsOpt() {
			return getRuleContext(DefParamsOptContext.class,0);
		}
		public ListaDefVarContext listaDefVar() {
			return getRuleContext(ListaDefVarContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode ID() { return getToken(PmmParser.ID, 0); }
		public SympleTypeContext sympleType() {
			return getRuleContext(SympleTypeContext.class,0);
		}
		public DefFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defFunc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitDefFunc(this);
			else return visitor.visitChildren(this);
		}
	}
